--- a/requirements.txt
+++ b/requirements.txt
@@ -32,8 +32,11 @@ numpy==2.2.5
 orjson==3.10.18
 packaging==24.2
 pillow==11.2.1
+pinecone==6.0.2
+pinecone-plugin-interface==0.0.7
 pydantic==2.11.4
 pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 PyYAML==6.0.2
 regex==2024.11.6
@@ -44,6 +47,7 @@ scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==4.1.0
 setuptools==80.1.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.40
 sympy==1.14.0
@@ -57,4 +61,3 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 urllib3==2.4.0
 zstandard==0.23.0
-pinecone-client==3.0.0
