Update and rename .env.example to .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PINECONE_API_KEY='your pinecone-API'
 PINECONE_ENVIRONMENT='pinecone environment'
-PINECONE_INDEX_NAME=hr-rag-sys
+PINECONE_INDEX_NAME='pinecone index name'
 GROQ_API_KEY = 'your grok-api-key'
